--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^10.5.2",
     "pdfjs-dist": "^4.1.392",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^18",
