--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_BACKEND_URL = http://localhost:7000
-NEXT_PUBLIC_FRONTEND_URL= https://growlearnhub.com
+NEXT_PUBLIC_FRONTEND_URL= http://localhost:3000
