--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-NEXT_PUBLIC_BACKEND_URL = http://localhost:7000
-NEXT_PUBLIC_FRONTEND_URL= http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:7000
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+
+# NEXT_PUBLIC_BACKEND_URL=https://growlearnhub-backend.vercel.app
+# NEXT_PUBLIC_FRONTEND_URL=https://growlearnhub-frontend.vercel.app
+
+NEXT_PUBLIC_GOOGLE_ANALYTICS= 'G-B6PW0GDNXK'
+# NEXT_PUBLIC_GOOGLE_ANALYTICS= 'AW-11356878085'
