--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --write \"**/*.{js,jsx,tsx,ts,json,css,scss,md}\""
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -14,9 +14,12 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.7",
+    "mongoose": "^8.4.1",
     "next": "14.1.4",
     "next-share": "^0.27.0",
+    "next-themes": "^0.3.0",
     "npm": "^10.5.2",
+    "prettier": "^3.3.1",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
@@ -39,7 +42,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "sass": "^1.77.2",
+    "sass": "^1.77.4",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
