--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "axios": "^1.6.8",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "i": "^0.3.7",
     "markdown-to-jsx": "^7.4.7",
     "mongoose": "^8.4.1",
     "next": "14.1.4",
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
-    "npm": "^10.5.2",
+    "npm": "^10.8.1",
     "prettier": "^3.3.1",
     "react": "^18",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-lite-youtube-embed": "^2.4.0",
+    "react-player": "^2.16.0",
     "react-select": "^5.8.0",
     "react-tag-input": "^6.9.0",
     "react-tagsinput": "^3.20.3",
