--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
     "semi": false,
-    "singleQuote": true,
+    "singleQuote": false,
     "tabWidth": 2,
     "useTabs": false,
-    "trailingComma": "es5"
+    "trailingComma": "none"
   }
-  
