--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
-    "react-tag-input": "^6.9.0",
+    "react-tag-input-component": "^2.0.2",
     "react-tagsinput": "^3.20.3",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
