--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@supabase/supabase-js": "^2.45.0",
+    "@types/mongoose": "^5.11.96",
     "axios": "^1.6.8",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
