--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@aws-sdk/client-dynamodb": "^3.665.0",
     "@aws-sdk/lib-dynamodb": "^3.665.0",
     "@headlessui/react": "^1.7.18",
+    "@types/aws-sdk": "^0.0.42",
     "@types/mongoose": "^5.11.96",
+    "@types/reflect-metadata": "^0.0.5",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.4",
+    "dynamoose": "^4.0.1",
     "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "mongoose": "^8.4.1",
@@ -33,8 +37,10 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-tag-input-component": "^2.0.2",
+    "reflect-metadata": "^0.2.2",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
+    "typeorm": "^0.3.20",
     "youtube-player": "^5.6.0"
   },
   "devDependencies": {
