--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@headlessui/react": "^2.1.10",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
-    "next": "15.0.2",
+    "next": "^14.2.15",
     "next-share": "^0.27.0",
     "next-themes": "^0.3.0",
     "pg": "^8.13.0",
     "prettier": "^3.3.3",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
