--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18.3.1",
@@ -83,6 +84,6 @@
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
