--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.4.1",
@@ -52,7 +51,6 @@
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
-    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18.3.1",
@@ -70,6 +68,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query-devtools": "^5.59.20",
     "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.11.10",
