--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tiptap/starter-kit": "^2.9.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,6 +56,8 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
@@ -69,6 +72,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query-devtools": "^5.59.20",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chart.js": "^2.9.41",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
